--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <p>Click the button below to access the workout timer:</p>
 
     <!-- 🔗 Replace workout_timer.html with the correct path if needed -->
-    <a href="workout_timer.html" target="_blank">Open Workout Timer</a>
+    <a href="timer2.html" target="_blank">Open Workout Timer</a>
 
 </body>
 </html>
