--- a/index.html
+++ b/index.html
@@ -14,16 +14,25 @@
         h1 {
             font-size: 2.5rem;
             color: #333;
+            margin-bottom: 20px;
+        }
+        p {
+            font-size: 1.2rem;
+            color: #555;
+        }
+        .button-container {
+            margin-top: 40px;
         }
         a {
             display: inline-block;
-            margin-top: 30px;
+            margin: 10px;
             padding: 15px 30px;
             background-color: #4CAF50;
             color: white;
             text-decoration: none;
             border-radius: 5px;
             font-size: 1.2rem;
+            transition: background-color 0.3s;
         }
         a:hover {
             background-color: #45a049;
@@ -32,11 +41,16 @@
 </head>
 <body>
 
-    <h1>Welcome to the Workout Timer Hub 💪</h1>
-    <p>Click the button below to access the workout timer:</p>
+    <h1>Workout Timer Hub 💪</h1>
+    <p>Select a day's workout timer below:</p>
 
-    <!-- 🔗 Replace workout_timer.html with the correct path if needed -->
-    <a href="timer2.html" target="_blank">Open Workout Timer</a>
+    <div class="button-container">
+        <a href="monday_workout.html" target="_blank">Monday Workout</a>
+        <a href="tuesday_workout.html" target="_blank">Tuesday Workout</a>
+        <a href="wednesday_workout.html" target="_blank">Wednesday Workout</a>
+        <a href="thursday_workout.html" target="_blank">Thursday Workout</a>
+        <a href="friday_workout.html" target="_blank">Friday Workout</a>
+    </div>
 
 </body>
 </html>
