--- a/monday_workout.html
+++ b/monday_workout.html
@@ -1,15 +1,188 @@
+
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
 <head>
-<meta charset='UTF-8'>
-<meta name='viewport' content='width=device-width, initial-scale=1.0'>
-<title>Monday Workout Timer</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Monday Workout Timer</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 50px;
+            background-color: #f4f4f4;
+            transition: background-color 0.5s ease;
+        }
+        #exercise {
+            font-size: 3rem;
+            font-weight: bold;
+            margin: 30px 0;
+        }
+        #timer, #overall-timer {
+            font-size: 3rem;
+            margin: 20px 0;
+        }
+        #up-next {
+            font-size: 1.5rem;
+            margin: 20px 0;
+            color: #555;
+        }
+        #progress-container {
+            width: 80%;
+            background-color: #ddd;
+            border-radius: 10px;
+            margin: 20px auto;
+            height: 30px;
+            overflow: hidden;
+        }
+        #progress-bar {
+            height: 100%;
+            width: 0%;
+            background-color: #76c7c0;
+            transition: width 0.5s linear;
+        }
+        button {
+            padding: 15px 30px;
+            font-size: 1rem;
+            margin: 10px;
+            cursor: pointer;
+        }
+        .start-btn {
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+        }
+        .stop-btn {
+            background-color: #f44336;
+            color: white;
+            border: none;
+        }
+        .next-btn {
+            background-color: #2196F3;
+            color: white;
+            border: none;
+        }
+        .pause-btn {
+            background-color: #FFC107;
+            color: white;
+            border: none;
+        }
+    </style>
 </head>
 <body>
-<h1>Monday Workout Timer</h1>
-<script>
-const workoutPlan = [{'exercise': 'Jumping Jacks', 'duration': 30, 'type': 'active'}, {'exercise': 'Arm Circles', 'duration': 30, 'type': 'active'}, {'exercise': 'Bodyweight Squats', 'duration': 30, 'type': 'active'}, {'exercise': 'Jumping Jacks', 'duration': 30, 'type': 'active'}, {'exercise': 'Arm Circles', 'duration': 30, 'type': 'active'}, {'exercise': 'Bodyweight Squats', 'duration': 30, 'type': 'active'}, {'exercise': 'Rest', 'duration': 30, 'type': 'rest'}, {'exercise': 'Bodyweight Squats', 'duration': 40, 'type': 'active'}, {'exercise': 'Rest', 'duration': 20, 'type': 'rest'}, {'exercise': 'Push-Ups', 'duration': 40, 'type': 'active'}, {'exercise': 'Rest', 'duration': 20, 'type': 'rest'}, {'exercise': 'Bent-Over Rows', 'duration': 40, 'type': 'active'}, {'exercise': 'Rest', 'duration': 20, 'type': 'rest'}, {'exercise': 'Glute Bridges', 'duration': 40, 'type': 'active'}, {'exercise': 'Rest', 'duration': 20, 'type': 'rest'}, {'exercise': 'Plank Hold', 'duration': 40, 'type': 'active'}, {'exercise': 'Rest', 'duration': 20, 'type': 'rest'}, {'exercise': 'Bodyweight Squats', 'duration': 40, 'type': 'active'}, {'exercise': 'Rest', 'duration': 20, 'type': 'rest'}, {'exercise': 'Push-Ups', 'duration': 40, 'type': 'active'}, {'exercise': 'Rest', 'duration': 20, 'type': 'rest'}, {'exercise': 'Bent-Over Rows', 'duration': 40, 'type': 'active'}, {'exercise': 'Rest', 'duration': 20, 'type': 'rest'}, {'exercise': 'Glute Bridges', 'duration': 40, 'type': 'active'}, {'exercise': 'Rest', 'duration': 20, 'type': 'rest'}, {'exercise': 'Plank Hold', 'duration': 40, 'type': 'active'}, {'exercise': 'Rest', 'duration': 20, 'type': 'rest'}, {'exercise': 'Bodyweight Squats', 'duration': 40, 'type': 'active'}, {'exercise': 'Rest', 'duration': 20, 'type': 'rest'}, {'exercise': 'Push-Ups', 'duration': 40, 'type': 'active'}, {'exercise': 'Rest', 'duration': 20, 'type': 'rest'}, {'exercise': 'Bent-Over Rows', 'duration': 40, 'type': 'active'}, {'exercise': 'Rest', 'duration': 20, 'type': 'rest'}, {'exercise': 'Glute Bridges', 'duration': 40, 'type': 'active'}, {'exercise': 'Rest', 'duration': 20, 'type': 'rest'}, {'exercise': 'Plank Hold', 'duration': 40, 'type': 'active'}, {'exercise': 'Rest', 'duration': 20, 'type': 'rest'}, {'exercise': 'Cooldown Stretches', 'duration': 180, 'type': 'active'}];
-console.log('Workout for Monday', workoutPlan);
-</script>
+
+    <h1>Monday Workout Timer</h1>
+    <div id="exercise">Press Start to Begin</div>
+    <div id="timer">00:00</div>
+
+    <div id="progress-container">
+        <div id="progress-bar"></div>
+    </div>
+
+    <div id="overall-timer">Total Time Left: 00:00</div>
+    <div id="up-next">Up Next: --</div>
+
+    <button class="start-btn" onclick="startWorkout()">Start Workout</button>
+    <button class="pause-btn" onclick="pauseResumeWorkout()">Pause</button>
+    <button class="next-btn" onclick="skipToNextExercise()">Next</button>
+    <button class="stop-btn" onclick="stopWorkout()">Stop</button>
+
+    <script>
+        const workoutPlan = [{"exercise": "Jumping Jacks", "duration": 30, "type": "active"}, {"exercise": "Push-Ups", "duration": 40, "type": "active"}, {"exercise": "Rest", "duration": 20, "type": "rest"}];
+
+        let currentIndex = 0;
+        let timeLeft = 0;
+        let totalDuration = 0;
+        let overallTimeLeft = workoutPlan.reduce((sum, ex) => sum + ex.duration, 0);
+        let timerInterval = null;
+        let isPaused = false;
+
+        function startWorkout() {
+            currentIndex = 0;
+            overallTimeLeft = workoutPlan.reduce((sum, ex) => sum + ex.duration, 0);
+            nextExercise();
+        }
+
+        function stopWorkout() {
+            clearInterval(timerInterval);
+            document.getElementById("exercise").innerText = "Workout Stopped";
+            document.getElementById("timer").innerText = "00:00";
+            document.getElementById("overall-timer").innerText = "Total Time Left: 00:00";
+            document.getElementById("up-next").innerText = "Up Next: --";
+            document.getElementById("progress-bar").style.width = "0%";
+            document.body.style.backgroundColor = "#f4f4f4";
+            isPaused = false;
+        }
+
+        function nextExercise() {
+            if (currentIndex < workoutPlan.length) {
+                const current = workoutPlan[currentIndex];
+                document.getElementById("exercise").innerText = current.exercise;
+                timeLeft = current.duration;
+                totalDuration = current.duration;
+
+                document.body.style.backgroundColor = current.type === "active" ? "#4CAF50" : "#f44336";
+
+                if (currentIndex + 1 < workoutPlan.length) {
+                    document.getElementById("up-next").innerText = "Up Next: " + workoutPlan[currentIndex + 1].exercise;
+                } else {
+                    document.getElementById("up-next").innerText = "Up Next: --";
+                }
+
+                updateTimer();
+                timerInterval = setInterval(updateTimer, 1000);
+            } else {
+                document.getElementById("exercise").innerText = "Workout Complete! 💪";
+                document.getElementById("timer").innerText = "00:00";
+                document.getElementById("overall-timer").innerText = "Total Time Left: 00:00";
+                document.getElementById("progress-bar").style.width = "100%";
+                document.body.style.backgroundColor = "#4CAF50";
+                alert("Great job! You finished the workout.");
+            }
+        }
+
+        function updateTimer() {
+            if (!isPaused) {
+                if (timeLeft > 0) {
+                    const mins = Math.floor(timeLeft / 60);
+                    const secs = timeLeft % 60;
+                    document.getElementById("timer").innerText = `${String(mins).padStart(2, '0')}:${String(secs).padStart(2, '0')}`;
+
+                    const overallMins = Math.floor(overallTimeLeft / 60);
+                    const overallSecs = overallTimeLeft % 60;
+                    document.getElementById("overall-timer").innerText = `Total Time Left: ${String(overallMins).padStart(2, '0')}:${String(overallSecs).padStart(2, '0')}`;
+
+                    const progressPercent = ((totalDuration - timeLeft) / totalDuration) * 100;
+                    document.getElementById("progress-bar").style.width = `${progressPercent}%`;
+
+                    timeLeft--;
+                    overallTimeLeft--;
+                } else {
+                    clearInterval(timerInterval);
+                    currentIndex++;
+                    nextExercise();
+                }
+            }
+        }
+
+        function pauseResumeWorkout() {
+            isPaused = !isPaused;
+            const pauseButton = document.querySelector('.pause-btn');
+            if (isPaused) {
+                clearInterval(timerInterval);
+                pauseButton.innerText = "Resume";
+            } else {
+                pauseButton.innerText = "Pause";
+                timerInterval = setInterval(updateTimer, 1000);
+            }
+        }
+
+        function skipToNextExercise() {
+            clearInterval(timerInterval);
+            currentIndex++;
+            nextExercise();
+        }
+    </script>
+
 </body>
 </html>
