--- a/week1_tuesday.html
+++ b/week1_tuesday.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monday – Full-Body Strength</title>
+    <title>Tuesday – Low-Impact Cardio</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -66,7 +66,7 @@
 </head>
 <body>
 
-    <h1>Monday – Full-Body Strength</h1>
+    <h1>Tuesday – Low-Impact Cardio</h1>
     <div id="exercise">Press Start to Begin</div>
     <div id="timer">00:00</div>
 
@@ -81,7 +81,7 @@
     <button class="stop-btn" onclick="stopWorkout()">Stop</button>
 
     <script>
-        const workoutPlan = [{"exercise": "Jumping Jacks", "duration": 30, "type": "active"}, {"exercise": "Arm Circles", "duration": 30, "type": "active"}, {"exercise": "Bodyweight Squats", "duration": 30, "type": "active"}, {"exercise": "Jumping Jacks", "duration": 30, "type": "active"}, {"exercise": "Arm Circles", "duration": 30, "type": "active"}, {"exercise": "Bodyweight Squats", "duration": 30, "type": "active"}, {"exercise": "Rest", "duration": 30, "type": "rest"}, {"exercise": "Dumbbell Squats", "duration": 40, "type": "active"}, {"exercise": "Rest", "duration": 20, "type": "rest"}, {"exercise": "Push-Ups", "duration": 40, "type": "active"}, {"exercise": "Rest", "duration": 20, "type": "rest"}, {"exercise": "Bent-Over Rows", "duration": 40, "type": "active"}, {"exercise": "Rest", "duration": 20, "type": "rest"}, {"exercise": "Glute Bridges with Dumbbell", "duration": 40, "type": "active"}, {"exercise": "Rest", "duration": 20, "type": "rest"}, {"exercise": "Plank Hold", "duration": 40, "type": "active"}, {"exercise": "Rest", "duration": 20, "type": "rest"}, {"exercise": "Dumbbell Squats", "duration": 40, "type": "active"}, {"exercise": "Rest", "duration": 20, "type": "rest"}, {"exercise": "Push-Ups", "duration": 40, "type": "active"}, {"exercise": "Rest", "duration": 20, "type": "rest"}, {"exercise": "Bent-Over Rows", "duration": 40, "type": "active"}, {"exercise": "Rest", "duration": 20, "type": "rest"}, {"exercise": "Glute Bridges with Dumbbell", "duration": 40, "type": "active"}, {"exercise": "Rest", "duration": 20, "type": "rest"}, {"exercise": "Plank Hold", "duration": 40, "type": "active"}, {"exercise": "Rest", "duration": 20, "type": "rest"}, {"exercise": "Dumbbell Squats", "duration": 40, "type": "active"}, {"exercise": "Rest", "duration": 20, "type": "rest"}, {"exercise": "Push-Ups", "duration": 40, "type": "active"}, {"exercise": "Rest", "duration": 20, "type": "rest"}, {"exercise": "Bent-Over Rows", "duration": 40, "type": "active"}, {"exercise": "Rest", "duration": 20, "type": "rest"}, {"exercise": "Glute Bridges with Dumbbell", "duration": 40, "type": "active"}, {"exercise": "Rest", "duration": 20, "type": "rest"}, {"exercise": "Plank Hold", "duration": 40, "type": "active"}, {"exercise": "Rest", "duration": 20, "type": "rest"}, {"exercise": "Quad Stretch", "duration": 60, "type": "active"}, {"exercise": "Hamstring Stretch", "duration": 60, "type": "active"}, {"exercise": "Shoulder Stretch", "duration": 60, "type": "active"}];
+        const workoutPlan = [{"exercise": "March in Place", "duration": 60, "type": "active"}, {"exercise": "Arm Swings", "duration": 60, "type": "active"}, {"exercise": "Torso Twists", "duration": 60, "type": "active"}, {"exercise": "High Knees", "duration": 60, "type": "active"}, {"exercise": "Jumping Jacks", "duration": 60, "type": "active"}, {"exercise": "Mountain Climbers", "duration": 60, "type": "active"}, {"exercise": "Bodyweight Lunges", "duration": 60, "type": "active"}, {"exercise": "Rest", "duration": 60, "type": "rest"}, {"exercise": "High Knees", "duration": 60, "type": "active"}, {"exercise": "Jumping Jacks", "duration": 60, "type": "active"}, {"exercise": "Mountain Climbers", "duration": 60, "type": "active"}, {"exercise": "Bodyweight Lunges", "duration": 60, "type": "active"}, {"exercise": "Rest", "duration": 60, "type": "rest"}, {"exercise": "High Knees", "duration": 60, "type": "active"}, {"exercise": "Jumping Jacks", "duration": 60, "type": "active"}, {"exercise": "Mountain Climbers", "duration": 60, "type": "active"}, {"exercise": "Bodyweight Lunges", "duration": 60, "type": "active"}, {"exercise": "Rest", "duration": 60, "type": "rest"}, {"exercise": "Deep Breathing and Stretching", "duration": 180, "type": "active"}];
 
         let currentIndex = 0;
         let timeLeft = 0;
